--- a/meson.build
+++ b/meson.build
@@ -66,7 +66,7 @@ add_project_arguments(cc.get_supported_arguments(flags), language : 'c')
 
 prog_python = import('python').find_installation('python3')
 
-libdrm_dep = dependency('libdrm', version : '>=2.4.50')
+libdrm_dep = dependency('libdrm', version : '>=2.4.50', required : false)
 thread_dep = dependency('threads')
 epoxy_dep = dependency('epoxy', version: '>= 1.5.4')
 m_dep = cc.find_library('m', required : false)
@@ -183,6 +183,10 @@ if get_option('buildtype') == 'debug'
    add_global_arguments('-DDEBUG=1', language : 'c')
 endif
 
+if libdrm_dep.found()
+  conf_data.set('HAVE_LIBDRM', 1)
+endif
+
 platforms = get_option('platforms')
 
 require_egl = platforms.contains('egl')
@@ -195,8 +199,13 @@ with_glx = require_glx or auto_egl_glx
 have_egl = false
 have_glx = false
 
+egl_without_gbm = get_option('egl_without_gbm')
+
 with_minigbm_allocation = get_option('minigbm_allocation')
 if with_minigbm_allocation
+   if egl_without_gbm
+      error('Cannot build gbm allocation without gbm')
+   endif
    conf_data.set('ENABLE_MINIGBM_ALLOCATION', 1)
    _gbm_ver = '18.0.0'
 else
@@ -205,8 +214,14 @@ endif
 
 if with_egl
    if cc.has_header('epoxy/egl.h', dependencies: epoxy_dep) and epoxy_dep.get_pkgconfig_variable('epoxy_has_egl') == '1'
-      gbm_dep = dependency('gbm', version: '>= ' + _gbm_ver, required: require_egl)
-      have_egl = gbm_dep.found()
+      if egl_without_gbm
+         gbm_dep = dependency('', required : false)
+         have_egl = true
+         conf_data.set('EGL_WITHOUT_GBM', 1)
+      else
+         gbm_dep = dependency('gbm', version: '>= ' + _gbm_ver, required: require_egl)
+         have_egl = gbm_dep.found()
+      endif
       if (have_egl)
          conf_data.set('HAVE_EPOXY_EGL_H', 1)
       else
@@ -316,7 +331,7 @@ summary({'prefix': get_option('prefix'),
         'libdir': get_option('libdir'),
         }, section: 'Directories')
 summary({'c_args': (' ').join(get_option('c_args')),
-        'egl': have_egl,
+        'egl': (have_egl ? 'yes' : 'no') + (egl_without_gbm ? ' (no gbm)' : ''),
         'glx': have_glx,
         'minigbm_alloc': with_minigbm_allocation,
         'venus': with_venus,
