Impl DXTn/S3TC texture decompression in virglrenderer
Based on https://github.com/alexvorxx/VirGL-Overlay-Rebuild/commit/e365e02209f5337eae21a53f3c463f5a3c122aa6 and https://github.com/alexvorxx/VirGL-Overlay-Rebuild/commit/d3052d9ee353d43867fa2fcf15ef072fcdaae2c4

--- a/src/meson.build
+++ b/src/meson.build
@@ -55,6 +55,7 @@ vrend_sources = [
    'vrend_tweaks.h',
    'vrend_winsys.c',
    'vrend_winsys.h',
+   'gl4es-decompress.c',
 ]
 
 virglrenderer_sources = [
